continued adding product data, finished labels and envelopes and mailers

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -179,9 +179,9 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Kraft Bubble Mailer</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Bubble Mailer</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Mailer</a></li>
+                  <li routerLink="kraft-bubble-mailers"><a mdbWavesEffect>Kraft Bubble Mailer</a></li>
+                  <li routerLink="poly-bubble-mailers"><a mdbWavesEffect>Poly Bubble Mailer</a></li>
+                  <li routerLink="poly-mailer"><a mdbWavesEffect>Poly Mailer</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
