--- a/src/app/products/mailers/poly-mailer/poly-mailer.component.html
+++ b/src/app/products/mailers/poly-mailer/poly-mailer.component.html
@@ -1,3 +1,131 @@
-<p>
-  poly-mailer works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/poly-mailer-1.jpg"
+            alt="Poly Mailers"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/poly-mailer-1.jpg"
+                    alt="Poly Mailers"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">MAXIMA BRAND POLY MAKER (SPECIALTY)</h3>
+          <p class="card-text lead">
+            Our <strong>Maxima</strong> polyethylene mailers are perfect for
+            shipping out lightweight products such as articles of clothing.
+          </p>
+          <p class="card-text lead">
+            <strong>Prevents damaged shipments:</strong> High quality (thick),
+            water, puncture, and tear-resistant.
+          </p>
+          <p class="card-text lead">
+            <strong>Economical:</strong> The poly mailer’s lightweight will help
+            you save a fortune on shipping costs.
+          </p>
+          <p class="card-text lead">
+            <strong>No glue or tape needed </strong>Includes a peel-off sealing
+            feature, which secures the mailer firmly without tape or glue. It
+            will definitely save you a lot of shipping time.
+          </p>
+          <p class="card-text lead">
+            <strong>Our brand has been around for over a decade </strong>We
+            source only the highest quality products and never cut on quality to
+            provide a our competitive prices; our strong supply chain and
+            relationships with the manufacturers allow us to offer our products
+            at a competitive price and maintain the level of quality that our
+            products are known for.
+          </p>
+          <p class="card-text lead">
+            <strong
+              >All sizes are INSIDE DIMENSIONS that are usable for
+              shipping.</strong
+            >
+          </p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col" style="padding-right: 0">PRODUCT #</th>
+            <th scope="col" style="padding-left: 1px">DESCRIPTION</th>
+            <th scope="col" style="padding-left: 1px">SIZE</th>
+            <th scope="col" style="padding-left: 1px">NUMBER/CASE</th>
+            <th scope="col">ADD TO CART</th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let mailer of polyMailers"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ mailer.productNumber }}</td>
+          <td class="item align-middle">{{ mailer.description }}</td>
+          <td class="item align-middle">{{ mailer.insideSize }}</td>
+          <td class="item align-middle">{{ mailer.numberPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
