worked on the strapping component data

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -192,11 +192,11 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Poly Strapping</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Strapping Machine</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Strapping Tools</a></li>
-                  <li><a href="#" mdbWavesEffect>Steel Strapping</a></li>
-                  <li><a href="#" mdbWavesEffect>V-Boards</a></li>
+                  <li routerLink="poly-strapping"><a mdbWavesEffect>Poly Strapping</a></li>
+                  <li routerLink="poly-strapping-machine"><a mdbWavesEffect>Poly Strapping Machine</a></li>
+                  <li routerLink="poly-strapping-tools"><a mdbWavesEffect>Poly Strapping Tools</a></li>
+                  <li routerLink="steel-strapping"><a mdbWavesEffect>Steel Strapping</a></li>
+                  <li routerLink="v-boards"><a mdbWavesEffect>V-Boards</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
